--- a/visuals.css
+++ b/visuals.css
@@ -24,10 +24,11 @@ H6 { display: inline; font-size: 187.5%; margin-right: 0; margin-bottom: 0; }
 	/*body{ padding-left: 0; padding-top: 0; padding-bottom: 0; margin-top: 0; margin-bottom: 0; }*/
 	body{ padding: 0; margin: 0; }
 	#navbar { display: none; }
-	#dummy { display: none; }
+	#dummyLeft { display: none; }
+	#dummyRight { display: none; }
 	#games { display: none; }
-	#pic { display: none; }
-	#jokes { display: none; }
+	#pic { display: none; }	
+	#fun { display: none; } 
 	#printOnly { display: block; }
 }
 
@@ -41,7 +42,7 @@ body
 
 	font-family: Arial;
 	margin-top: 1em;
-	margin-right: 10%;
+	/*margin-right: 10%;*/
 }
 
 
@@ -238,8 +239,17 @@ ul.navbar
 }
 
 
-#tagline { font-style:italic; }
 
+#navbar
+{
+	width: 10em;
+	border-top: 3px; 
+	border-right: 0; 
+	border-bottom: 0; 
+	border-left: 0; 
+	border-style: solid; 
+	border-color: #CC0000;
+}
 
 /* This is to be used with the 'ul' tag to create a left justified nav bar. */
 #header
@@ -250,20 +260,38 @@ ul.navbar
 	font-size: 80%;
 }
 
-
 #main
 {
 	padding-left: 5%;
+	padding-right: 5%;
+	border-top: 3px; 
+	border-right: 0; 
+	border-bottom: 0; 
+	border-left: 0; 
+	border-style: solid; 
+	border-color: #CC0000;
 	/* this would be in 'body' above, but IE doesn't allow it up there */
 	font-size: 80%;
 }
 
-
-#navbar
+#fun
 {
-	width: 18ex;
-	margin-left:2ex;
-	margin-right:2ex;
+	width: 10em;
+	padding-right: 1%;
+	border-top: 3px; 
+	border-right: 0; 
+	border-bottom: 0; 
+	border-left: 0; 
+	border-style: solid; 
+	border-color: #CC0000;
 }
 
 
+#tagline { font-style:italic; }
+
+#joke 
+{ 
+	font-style:italic; 
+	/* this would be in 'body' above, but IE doesn't allow it up there */
+	font-size: 80%;
+}
